--- a/styles/style.css
+++ b/styles/style.css
@@ -71,3 +71,21 @@ body {
 section {
     margin: 1rem 0;
 }
+
+/*--- CSS Level-Selector ---*/
+.level-selector {
+    display: flex;
+    justify-content: center;
+    margin-top: 3.125rem;
+}
+
+.level-button {
+    padding: .625rem 1.25rem;
+    margin: 0 .625rem;
+    border: none;
+    border-radius: .3125rem;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #3498db;
+    cursor: pointer;
+}
