--- a/styles/style.css
+++ b/styles/style.css
@@ -7,13 +7,24 @@ html {
 }
 
 body {
-    max-width: 1280px;
     margin: auto;
+    overflow: hidden;
 }
 
+main{
+    height: 100%;
+    overflow: hidden;
+}
 
 *, *:before, *:after {
     box-sizing: border-box;
+}
+
+.container {
+    max-width: 90rem;
+    margin: 0 auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 /*  GAMEBOARD */
@@ -21,43 +32,60 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 40rem;
 }
 
-.field:nth-child(odd) div:nth-child(even),
-.field:nth-child(even) div:nth-child(odd) {
+.field:nth-child(odd) .grid-cell:nth-child(even),
+.field:nth-child(even) .grid-cell:nth-child(odd) {
     background: green;
 }
 
-.field:nth-child(odd) div:nth-child(odd),
-.field:nth-child(even) div:nth-child(even) {
+.field:nth-child(odd) .grid-cell:nth-child(odd),
+.field:nth-child(even) .grid-cell:nth-child(even) {
     background: lightgreen;
 }
 
 .field {
     display: flex;
+    height: 16.6%;
 }
 
 .grid-cell {
-    padding: 2rem;
     margin: 0;
+    width: 12.5%;
+    overflow: visible;
+}
+
+.grid-cell>div{
+    width: 100%;
+    height: 100%;
+}
+
+.grid-cell img{
+    z-index: 100;
+    width: 100%;
+    height: 100%;
 }
 
 .tower {
-    position: absolute;
-    width: 4rem;
-    height: 4rem;
+    display: block;
     background-color: red;
+    width: 100%;
+    height: 100%;
+
 }
 
 .items {
     display: flex;
+    gap: 2rem;
 }
 .item {
     background: darkgoldenrod;
+    position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    width: 4rem;
-    height: 4rem;
+    width: 15%;
     align-items: center;
 
 }
@@ -66,6 +94,12 @@ body {
     user-select: none;
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.item img{
+    width: 80%;
+    height: 80%;
+    /*margin-top: -4rem;*/
 }
 
 section {
