--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,7 @@ main{
     width: 20%;
     text-align: right;
     z-index: 1000;
+    border-radius: 2rem;
 }
 .points span{
     font-size: 3rem;
@@ -128,6 +129,7 @@ main{
     height: 20%;
     width: 18rem;
     align-items: center;
+    border-radius: 2rem;
 }
 
 .item span {
